<resources>
    <string name="app_name">S Note</string>
    <string name="app_minor_version">22570</string>
    <string name="string_progress_app_name_version">S Note</string>
    <string name="string_filemanager_file_size_byte">Byte</string>
    <string name="fm_property_type_ppt">Microsoft Office PowerPoint 97-2003</string>
    <string name="fm_property_type_docx">Microsoft Office Word 2007</string>
    <string name="fm_property_type_xlsx">Microsoft Office Excel 2007</string>
    <string name="fm_property_type_pptx">Microsoft Office PowerPoint 2007</string>
    <string name="string_progress_loading">Loading...</string>
    <string name="string_progress_loading_folder">Loading...</string>
    <string name="string_wordeditor_mainmenu_viewmode">Read mode</string>
    <string name="string_wordeditor_mainmenu_save">Close</string>
    <string name="string_wordeditor_mainmenu_saveas">Save as</string>
    <string name="string_wordeditor_mainmenu_zoom">Zoom in/out</string>
    <string name="string_wordeditor_mainmenu_reflowtext">Reflow text</string>
    <string name="string_wordeditor_mainmenu_find">Find</string>
    <string name="string_wordeditor_mainmenu_replace">Overwrite</string>
    <string name="string_wordeditor_mainmenu_insert">Insert</string>
    <string name="string_wordeditor_mainmenu_format">Format</string>
    <string name="string_wordeditor_mainmenu_table">Table %s</string>
    <string name="string_localfilelist_mainmenu_newfolder">Create folder</string>
    <string name="string_common_filesave_resultmsg_saved">Saved</string>
    <string name="string_clipboard_filesave_resultmsg_saved">Saved</string>
    <string name="string_common_filesave_resultmsg_error">Failed to save document</string>
    <string name="string_common_contextmenu_save">Save</string>
    <string name="string_contextmenu_object_delete">Delete</string>
    <string name="string_contextmenu_object_copy">Copy</string>
    <string name="string_contextmenu_object_cut">Cut</string>
    <string name="string_contextmenu_object_paste">Paste</string>
    <string name="cm_setting_copy_progress">Copying...</string>
    <string name="cm_setting_move_progress">Moving...</string>
    <string name="string_filemanager_accountadd_email">Email</string>
    <string name="string_filemanager_accountadd_password">Password</string>
    <string name="string_filemanager_foldercreate">New folder</string>
    <string name="string_filemanager_foldercreate_name">Enter folder name</string>
    <string name="string_filemanager_context_move">Move</string>
    <string name="string_filemanager_context_copy">Copy</string>
    <string name="string_filemanager_context_paste">Paste</string>
    <string name="string_filemanager_context_delete">Delete</string>
    <string name="string_filemanager_context_rename">Rename</string>
    <string name="string_filemanager_context_extract">Extract</string>
    <string name="string_filemanager_context_sendfiles">Send</string>
    <string name="string_filemanager_context_properties">Properties</string>
    <string name="string_filemanager_context_download">Download</string>
    <string name="string_filemanager_contextmenu_filecreate">New file</string>
    <string name="string_filemanager_progress_localfile_sorting">Sorting...</string>
    <string name="string_filemanager_progress_localfile_refresh_web_filelist">Updating...</string>
    <string name="string_filemanager_file_errmsg_duplication">File or folder name already in use</string>
    <string name="string_filemanager_no_notes">No notes</string>
    <string name="string_filemanager_no_memos">No memos</string>
    <string name="string_errmsg_title_error">Error</string>
    <string name="string_errmsg_invalid_formula">Invalid formula</string>
    <string name="string_select_folder_message">Select a folder to copy or move the file to</string>
    <string name="string_select_folder_copy_message">Select a folder to copy</string>
    <string name="string_select_folder_move_message">Select a folder to move</string>
    <string name="filemanager_file_error_msg">File error</string>
    <string name="filemanager_file_delete_msg">This file/folder will be deleted</string>
    <string name="filemanager_file_exist_error_msg">File or folder name already in use</string>
    <string name="filemanager_file_recent_open_error">%1$s not found</string>
    <string name="filemanager_file_fine_name_error">Invalid file name</string>
    <string name="filemanager_file_name_max_error">File name too long</string>
    <string name="filemanager_file_copy_error_msg">Cancelled</string>
    <string name="filemanager_folder_copy_to_itself_error">Destination folder is the same as the source folder</string>
    <string name="filemanager_folder_copy_to_subfolder_error">Destination folder is a subfolder of the source folder</string>
    <string name="filemanager_file_folder_delete_success">Deleted</string>
    <string name="filemanager_filename_alert_msg">%1$s characters left</string>
    <string name="filemanager_filename_alert_msg_singular">1 character left</string>
    <string name="filemanager_filename_limit_msg">File or folder name should be no longer than %1$s characters</string>
    <string name="filemanager_Insufficient_momory">Not enough memory</string>
    <string name="string_filemanager_webstorage_wait">Network error occurred. Try again later</string>
    <string name="fm_property_type_folder">Folder</string>
    <string name="string_common_button_ok">OK</string>
    <string name="string_common_button_no">No</string>
    <string name="string_common_button_cancel">Cancel</string>
    <string name="string_common_button_select">Select</string>
    <string name="string_common_button_move">Move</string>
    <string name="string_common_listcontrol_footer">More</string>
    <string name="filemanager_file_rename_exttype_msg">"If you change a filename extension, the file may become unusable.
Are you sure you want to change it?"</string>
    <string name="string_common_msg_dialog_message_error">Error occurred</string>
    <string name="string_common_msg_dialog_title_confirm">Confirm</string>
    <string name="string_common_msg_dialog_message_confirm">Confirmation is required</string>
    <string name="string_filemanager_setting_recentfile_clear">Cleared</string>
    <string name="string_filemanager_web_login_fail">Failed to log in to server</string>
    <string name="string_filemanager_web_network_connection_fail">Network not available</string>
    <string name="string_filemanager_web_upload_fail_not_support">File format not supported</string>
    <string name="string_filemanager_web_download_overriding_positive">Save</string>
    <string name="string_filemanager_web_download_overriding_neutral">Skip</string>
    <string name="string_filemanager_web_download_overriding_negative">Cancel</string>
    <string name="string_filemanager_web_download_overriding_empty_filename">File name</string>
    <string name="string_filemanager_extract_file_valid_password">Incorrect password. Enter valid password</string>
    <string name="string_filemanager_extract_file_password">Enter password</string>
    <string name="string_filemanager_network_not_available">Network is not available</string>
    <string name="string_slidenote_max_length">Cannot exceed more than %1$s characters</string>
    <string name="filemanager_file_delete_cancel_msg">Cancelled</string>
    <string name="filemanager_file_delete_error_msg">Failed to delete</string>
    <string name="string_progress_deleting">Deleting...</string>
    <string name="filemanager_file_multi_delete_msg">%1$d files will be deleted</string>
    <string name="string_filedownload_longfile_error_title">Warning</string>
    <string name="string_filedownload_longfile_error_msg">Maximum %1$s characters are allowed, do you want to change the name?</string>
    <string name="string_fileduplication_message">Cannot overwrite the file</string>
    <string name="string_filemanager_context_extract_with_filename">Extracting files...</string>
    <string name="string_common_filesave_overwrite">The filename already exists. Do you want to overwrite the file?</string>
    <string name="string_filemanager_recentfile_nofile_title">No files</string>
    <string name="string_filemanager_copy_fail_msg">Failed to copy</string>
    <string name="string_filemanager_rename_message">Enter new file/folder name</string>
    <string name="string_filemanager_copy_overriding">File or folder name already in use. Replace?</string>
    <string name="string_filemanager_copy_bgm_notification">Background music may prevent file deletion</string>
    <string name="string_common_button_more">More</string>
    <string name="string_filemanager_drag_title">Move folders/files</string>
    <string name="string_filemanager_drag_message">Move selected files or folders here?</string>
    <string name="fm_property_type_file">File</string>
    <string name="fm_property_type_file_and_folder">Files and folders</string>
    <string name="string_filemanager_search_title">Search file in %1$s</string>
    <string name="fm_property_type_pps">PowerPoint Show</string>
    <string name="string_filemanager_file_size_bytes">bytes</string>
    <string name="filemanager_one_item_delete_msg">1 item will be deleted</string>
    <string name="filemanager_folder_multi_delete_msg">%1$s items will be deleted</string>
    <string name="filemanager_filefolder_multi_delete_msg">%1$s items will be deleted</string>
    <string name="filemanager_file_single_delete_msg">This file will be deleted</string>
    <string name="filemanager_folder_single_delete_msg">This folder will be deleted</string>
    <string name="string_filemanager_search_fail">No matches</string>
    <string name="string_filemanager_search_no_results">No results found</string>
    <string name="string_filemanager_search_end">File finding is completed</string>
    <string name="string_multiple_close_only">%1$s is opened. Close the document then continue?</string>
    <string name="string_multiple_close_with_save">%1$s is editing. Save the document then continue?</string>
    <string name="string_filemanager_search_hint">Search files</string>
    <string name="string_input_size_change">Invalid value</string>
    <string name="string_localfilelist_mainmenu_listview">List view</string>
    <string name="string_localfilelist_mainmenu_gridview">Thumbnail view</string>
    <string name="string_template_sheet_official_record">Record</string>
    <string name="string_filemanager_menu_sortby">Sort by</string>
    <string name="string_filemanager_menu_import">Import</string>
    <string name="string_filemanager_menu_refresh">Refresh</string>
    <string name="string_voice_memo_title">Voice memo</string>
    <string name="string_voice_memo_replace">Overwrite</string>
    <string name="string_voice_memo_delete">Delete</string>
    <string name="string_context_delete">Delete</string>
    <string name="string_context_rename">Rename</string>
    <string name="string_context_lock">Lock</string>
    <string name="string_context_editcover">Edit cover</string>
    <string name="string_context_shortcut">Set as shortcut</string>
    <string name="string_context_Export">Export</string>
    <string name="string_filemanager_filecreate">Create note</string>
    <string name="string_title_template_dialog">Select a template</string>
    <string name="text_setting_tab_list">List</string>
    <string name="string_drawing_record_stop">Stop</string>
    <string name="string_tutorial_drawingmode">Drawing mode</string>
    <string name="string_tutorial_textselectionmode">Text mode</string>
    <string name="string_tutorial_insertobject">Insert object</string>
    <string name="string_hovering_tootip_pause">Pause</string>
    <string name="string_nametext">asdasd</string>
    <string name="string_emailtext" />
    <string name="string_numbertext" />
    <string name="string_time">00:00:00</string>
    <string name="string_record_resume">Resume</string>
</resources>