<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/tw_dialog_middle_holo_dark" android:layout_width="670.0px" android:layout_height="wrap_content" android:minHeight="224.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/contactview" android:layout_width="160.0px" android:layout_height="160.0px" android:layout_marginLeft="76.0px" android:layout_marginTop="36.0px" />
    <TextView android:textSize="40.0px" android:textColor="#ffc8c8c8" android:gravity="center" android:id="@id/nametextview" android:layout_width="wrap_content" android:layout_height="54.0px" android:layout_marginLeft="22.0px" android:layout_marginTop="36.0px" android:text="@string/string_nametext" android:singleLine="true" android:layout_toRightOf="@id/contactview" />
    <TextView android:textSize="36.0px" android:textColor="#ffa2a2a2" android:gravity="center" android:id="@id/emailtextview" android:layout_width="wrap_content" android:layout_height="54.0px" android:text="@string/string_emailtext" android:singleLine="true" android:layout_below="@id/nametextview" android:layout_alignLeft="@id/nametextview" />
    <TextView android:textSize="36.0px" android:textColor="#ffa2a2a2" android:gravity="center" android:id="@id/numbertextview" android:layout_width="wrap_content" android:layout_height="54.0px" android:text="@string/string_numbertext" android:singleLine="true" android:layout_below="@id/emailtextview" android:layout_alignLeft="@id/nametextview" />
</RelativeLayout>
