<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/snote_widget_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ViewFlipper android:id="@id/widget_viewflipper" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/widget_viewflipper_01" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip">
                <Button android:textSize="19.0dip" android:textColor="#995b410f" android:gravity="center" android:id="@id/select_mode_button_note" android:background="@drawable/snote_widget_create_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/text_setting_tab_list" android:singleLine="true" android:layout_weight="1.0" />
                <LinearLayout android:background="@drawable/snote_widget_title_line_vertical" android:layout_width="1.0dip" android:layout_height="44.0dip" />
                <Button android:enabled="false" android:textSize="19.0dip" android:textColor="#ff5b410f" android:gravity="center" android:background="@drawable/snote_widget_create_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/string_filemanager_filecreate" android:singleLine="true" android:shadowColor="#40ffffff" android:shadowDx="0.0" android:shadowDy="1.0" android:shadowRadius="1.0" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:background="@drawable/snote_widget_title_line_horizontal" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" />
            <GridView android:scrollbarStyle="outsideInset" android:id="@id/widget_gridview_template" android:paddingLeft="14.0dip" android:paddingTop="5.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="2.5dip" android:horizontalSpacing="1.0dip" android:columnWidth="84.0dip" android:numColumns="auto_fit" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/widget_viewflipper_02" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip">
                <Button android:enabled="false" android:textSize="19.0dip" android:textColor="#ff5b410f" android:gravity="center" android:background="@drawable/snote_widget_create_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/text_setting_tab_list" android:singleLine="true" android:shadowColor="#40ffffff" android:shadowDx="0.0" android:shadowDy="1.0" android:shadowRadius="1.0" android:layout_weight="1.0" />
                <LinearLayout android:background="@drawable/snote_widget_title_line_vertical" android:layout_width="1.0dip" android:layout_height="44.0dip" />
                <Button android:textSize="19.0dip" android:textColor="#995b410f" android:gravity="center" android:id="@id/select_mode_button_template" android:background="@drawable/snote_widget_create_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/string_filemanager_filecreate" android:singleLine="true" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:background="@drawable/snote_widget_title_line_horizontal" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" />
            <FrameLayout android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <GridView android:scrollbarStyle="outsideInset" android:id="@id/widget_gridview_note" android:paddingLeft="16.0dip" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="2.5dip" android:horizontalSpacing="1.0dip" android:verticalSpacing="4.0dip" android:columnWidth="82.0dip" android:numColumns="auto_fit" />
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/widget_note_empty" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:id="@id/nonotes_btn" android:background="@drawable/ic_no_note_main" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textSize="19.0dip" android:textColor="#7f5a4831" android:id="@id/nonotes_btn_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/string_filemanager_no_notes" android:shadowColor="#2fffffff" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ViewFlipper>
</LinearLayout>
